Fixed so that the widget tool's z-index is right bellow the top and bottom bars.

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -36,7 +36,7 @@ p.navbar-text.pull-left {
     padding-left: 5px;
     padding-bottom: 5px;
     border-bottom-left-radius: 8px;
-    z-index: 10000;
+    z-index: 1029;
 }
 
 .jw-list-group {
